--- a/styles/architect.css
+++ b/styles/architect.css
@@ -6,7 +6,16 @@
     font-family: 'Work Sans', sans-serif;
 }
 
-.btn-primary {}
+.btn-primary {
+    border-radius: 8px;
+    color: white;
+    font-size: 1.25rem;
+    font-weight: 600;
+    background-color: #FF900E;
+    padding: 20px 25px;
+    cursor: pointer;
+    border: 0;
+}
 
 /* header styles */
 header {
@@ -57,4 +66,32 @@ nav li a {
 
 .banner-description {
     color: #727272;
+}
+
+.banner img {
+    width: 100%;
+    margin-top: 20px;
+}
+
+/* responsive media queries */
+/* mobie devices */
+@media screen and (max-width:576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+}
+
+/* tablet or medium devices */
+@media screen and (min-width:576px) and (max-width:960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
 }
