--- a/styles/architect.css
+++ b/styles/architect.css
@@ -21,6 +21,12 @@
     border: 0;
 }
 
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
+
 /* header styles */
 header {
     background-color: bisque;
@@ -33,11 +39,7 @@ nav {
     align-items: center;
 }
 
-.nav-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
-}
+
 
 nav>ul {
     display: flex;
