--- a/styles/architect.css
+++ b/styles/architect.css
@@ -115,6 +115,41 @@ main {
     font-weight: 700;
 }
 
+/* features section styles */
+.features {
+    margin-top: 130px;
+    gap: 140px;
+    display: flex;
+}
+
+.features .section-title {
+    border-left: 5px solid #FF900F;
+    padding-left: 20px;
+}
+
+.feature-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background-color: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(207, 15, 15, 0.06);
+
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background-color: #FF900E;
+    color: white;
+    width: 342px;
+    padding: 40px;
+}
+
+.ten-years-badge h2 {
+    font-size: 4rem;
+}
+
+
+
 /* facts section */
 
 .facts-card-container {
