--- a/styles/architect.css
+++ b/styles/architect.css
@@ -136,16 +136,29 @@ main {
 
 }
 
+.feature-img img {
+    height: 90%;
+    margin-left: 90px;
+}
+
 .ten-years-badge {
     border-radius: 8px;
     background-color: #FF900E;
     color: white;
-    width: 342px;
+    width: 340px;
     padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
 }
 
 .ten-years-badge h2 {
     font-size: 4rem;
+    margin: 0;
+}
+
+.ten-years-badge p {
+    font-size: 1.5rem;
 }
 
 
@@ -206,9 +219,20 @@ main {
 
     nav,
     .teams-container,
+    .features,
     .facts-card-container,
     .sponsors-img-container {
         flex-direction: column;
+    }
+
+    .feature-img img {
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .ten-years-badge {
+        position: static;
+        max-width: 300px;
     }
 
     .teams-img-container {
@@ -234,7 +258,8 @@ main {
 
     nav,
     .teams-container,
-    .sponsors-img-container {
+    .sponsors-img-container,
+    .features {
         flex-direction: column;
     }
 }
