added the footer part

--- a/styles/architect.css
+++ b/styles/architect.css
@@ -3,6 +3,10 @@
 
 /* Shared Styles */
 * {
+    margin: 0;
+}
+
+* {
     font-family: 'Work Sans', sans-serif;
 }
 
@@ -206,6 +210,20 @@ main {
 
 .sponsors-img-container img {
     width: 165px;
+}
+
+/* footer part */
+footer {
+    text-align: center;
+    background-color: black;
+    height: 100px;
+}
+
+.last-title {
+    padding: 35px;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 
 
